--- a/rabot.css
+++ b/rabot.css
@@ -41,6 +41,16 @@ body {
 	width: 100%
 }
 
+.blocky {
+	height: auto;
+}
+
+.im_block {
+	width: 100%;
+	height: 100%;
+	border-radius: 5px;
+}
+
 .scroll {
 	width: 80%;
 	white-space: nowrap;
@@ -80,6 +90,20 @@ body {
 	border-radius: 5px;
 }
 
+.block_5 {
+	width: 500px;
+	height: 300px;
+	background: white;
+	display: flex;
+	margin: 30px;
+	border-radius: 5px;
+}
+
+.img_2 {
+	border-radius: 5px;
+	cursor: pointer;
+}
+
 .footer {
 	background: #474747;
 	width: 100%;
@@ -96,9 +120,6 @@ body {
 	margin: 15px;
 	margin-top: 13px;
 }
-
-
-
 
 @media screen and (max-width: 1600px) {
 	.block {
@@ -201,4 +222,67 @@ body {
 	.footer {
 		height: 100px;
 	}
+}
+
+
+/* картинка на странице */
+.img_2 {
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  border: 1px solid #FFF;
+}
+.img_2:hover {
+  border: 1px solid yellow;
+}
+/* увеличенная картинка */
+#magnify {
+  display: none;
+  /* position: absolute; upd: 24.10.2016 */
+  position: fixed;
+  max-width: 1000px;
+  height: auto;
+  z-index: 9999;
+}
+#magnify img {
+  width: 100%;
+}
+/* затемняющий фон */
+#overlay {
+  display: none;
+  background: #000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0.5;
+  z-index: 9990;
+}
+/* кнопка закрытия */
+#close-popup {
+  width: 30px;
+  height: 30px;
+  background: #FFFFFF;
+  border: 1px solid #AFAFAF;
+  border-radius: 15px;
+  cursor: pointer;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+}
+#close-popup i {
+  width: 30px;
+  height: 30px;
+  background: url(cross.png) no-repeat center center;
+  background-size: 16px 16px;
+  display: block;
+}
+@keyframes rota {
+ 25% { transform: rotate(360deg); }
+}
+#close-popup:hover {
+  animation: rota 4s infinite normal;
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1;
 }
