--- a/rabot.css
+++ b/rabot.css
@@ -62,11 +62,13 @@ body {
 }
 
 .block_2 {
-	margin: 30px;
+	margin-top: 20px;
+	margin-right: 20px;
+	margin-left: 20px;
+	margin-bottom: 30px;
 	display: flex;
 	width: 500px;
 	height: 300px;
-	margin-left: auto;
 	background-color: white;
 	border-radius: 5px;
 }
@@ -107,7 +109,7 @@ body {
 }
 
 .footer {
-	background: #474747;
+	background: #34373D;
 	width: 100%;
 	height: 50px;
 	bottom: 0px;
