--- a/rabot.css
+++ b/rabot.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: Hermes; /* Гарнитура шрифта */
+    src: url(fonts/hermes.eot); /* Для IE5-8 */
+    src: local(hermes), url(fonts/hermes.ttf); /* Для остальных браузеров */
+   }
+
 body {
 	background-color: #2A2A2A;
 	margin: 0px;
@@ -46,6 +52,7 @@ body {
 
 .blocky {
 	height: auto;
+	margin-bottom: 100px;
 }
 
 .im_block {
@@ -64,11 +71,11 @@ body {
 
 .block_2 {
 	margin-top: 0px;
-	margin-right: 20px;
-	margin-left: 20px;
+	margin-right: auto;
+	margin-left: auto;
 	margin-bottom: 50px;
 	display: flex;
-	width: 500px;
+	width: 95%;
 	height: 300px;
 	background-color: white;
 	border-radius: 5px;
@@ -290,4 +297,12 @@ body {
   animation: rota 4s infinite normal;
   -webkit-animation-iteration-count: 1;
   animation-iteration-count: 1;
+}
+
+.up_block {
+	text-align: center;
+	color: white;
+	font-family: hermes;
+	font-size: 40px;
+	margin: 10px;
 }
