--- a/rabot.css
+++ b/rabot.css
@@ -34,6 +34,12 @@ body {
 	padding: 6px;
 }
 
+.head_center {
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .cat_t {
 	margin: 8px;
 	color: white;
