--- a/rabot.css
+++ b/rabot.css
@@ -15,7 +15,7 @@ body {
 	background-color: #2A2A2A;
 	margin: 0px;
 	background-image: url(
-		b.webp);
+		image/b.webp);
 }
 
 .head {
@@ -52,7 +52,6 @@ body {
 	width: 80%;
 	padding: : 50px;
 	height: 700px;
-	background-color: white;
 	margin-left: auto;
 	margin-right: auto;
 	border-radius: 5px;
@@ -72,6 +71,8 @@ body {
 	width: 100%;
 	height: 100%;
 	border-radius: 5px;
+	border: 2px;
+	border-color: white;
 }
 
 .scroll {
@@ -299,7 +300,7 @@ body {
 #close-popup i {
   width: 30px;
   height: 30px;
-  background: url(cross.png) no-repeat center center;
+  background: url(image/cross.png) no-repeat center center;
   background-size: 16px 16px;
   display: block;
 }
