--- a/rabot.css
+++ b/rabot.css
@@ -51,7 +51,7 @@ body {
 .block {
 	width: 80%;
 	padding: : 50px;
-	height: 700px;
+	height: 60%;
 	margin-left: auto;
 	margin-right: auto;
 	border-radius: 5px;
