--- a/rabot.css
+++ b/rabot.css
@@ -75,6 +75,7 @@ body {
 	margin: 2px;
 	margin-left: 13%;
 	cursor: default;
+	width: 0%;
 }
 
 .t_vub:hover {
@@ -121,6 +122,7 @@ body {
 	border-radius: 5px;
 	border: 2px;
 	border-color: white;
+	margin-bottom: 30px;
 }
 
 .scroll {
