--- a/rabot.css
+++ b/rabot.css
@@ -58,6 +58,22 @@ body {
  }
 }
 
+.sp {
+	display: none;
+}
+
+.spoiler-title {
+	cursor: pointer;
+	color: white;
+	font-size: 30px;
+	margin: 0px;
+	text-align: center;
+	margin-bottom: 60px;
+	width: 20%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .vub {
 	width: 79%;
 	height: 10px;
@@ -66,6 +82,7 @@ body {
 	margin-left: auto;
 	opacity: 70%;
 	border-radius: 2px;
+	margin-bottom: 40px;
 }
 
 .t_vub {
