--- a/rabot.css
+++ b/rabot.css
@@ -93,6 +93,7 @@ body {
 	margin-left: 13%;
 	cursor: default;
 	width: 0%;
+	margin-top: 120px;
 }
 
 .t_vub:hover {
@@ -217,7 +218,7 @@ body {
 
 	.footer {
 		height: 75px;
-		position: fixed;
+		position: flex;
 	}
 
 	.mail {
