--- a/s/rabot.css
+++ b/s/rabot.css
@@ -16,12 +16,7 @@ body {
 	margin: 0px;
 	background-image: url(
 		image/b.webp);
-}
-
-.secret {
-	width: 10px;
-	height: 10px;
-	opacity: 0%;
+	cursor: pointer;
 }
 
 .head {
